Fix collapsed nav menu

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -185,7 +185,7 @@
 * Primary Navbar
 *********************/
 .navbar-primary .navbar-brand {
-    font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
+    font-family: "Lobster","Helvetica Neue",Helvetica,Arial,cursive;
     color: #fff;
 }
 .navbar-primary .nav li a {
